Add user following

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,6 +4,9 @@
   		<select>
   			<%= render 'shared/user_info' %>
   		</select>
+      <select>
+        <%= render 'shared/stats' %>
+      </select>
   		<select>
   			<%= render 'shared/micropost_form' %>
   		</select>
